Final pre-refactoring entity metadata keys